2007-06-26  Denis Washington  <denisw@svn.gnome.org>

	* gtk-theme-thumbnailing.png:
	* icon-theme-thumbnailing.png:
	* window-theme-thumbnailing.png:
	Placeholder thumbnails for gtk+, metacity and icon themes.

	* Makefile.am: Add new files.

	* appearance.h:
	* appearance-style.h:
	* appearance-style.c: (style_init), (style_shutdown), (prepare_list):
	Use the new placeholder thumbnails for the details window's theme lists.

	* appearance-main.c: Call new style_shutdown ().

2007-06-25  Denis Washington  <denisw@svn.gnome.org>

	* appearance.glade: Fixed resize problems.

2007-06-25  Jens Granseuer  <jensgr@gmx.net>

	* appearance-style.c: (prepare_list): don't try to use uninitialized
	GdkPixbuf

2007-06-25  Denis Washington  <denisw@svn.gnome.org>

	* appearance-themes.c:
	Adjusted for the API changes in theme-thumbnail.c. Thumbnail requestes are
	now directly queued by generate_*_async(), so do not maintain an own queue
	anymore.

	* appearance-style.c:
	Use the new asynchronous thumbnail generation functions, and replace all
	occurrences of "metacity_themes_list" with the correct "window_themes_list".

	* appearance.h:
	Remove "theme_queue", it is not needed anymore.

2007-06-24  Jens Granseuer  <jensgr@gmx.net>

	* Makefile.am:
	* appearance-themes.c: (theme_selection_changed_cb),
	(theme_save_cb), (themes_init), (themes_shutdown):
	* appearance.glade:
	* appearance.h:
	* theme-save.c:
	* theme-save.h:
	* theme-util.h: implement theme saving

2007-06-23  Jens Granseuer  <jensgr@gmx.net>

	* appearance-style.c: rearranged functions (no code changes)

2007-06-23  Jens Granseuer  <jensgr@gmx.net>

	* theme-util.c: (theme_delete): use STOCK_DELETE instead of STOCK_OK in
	the confirmation dialog

2007-06-23  Jens Granseuer  <jensgr@gmx.net>

	* appearance-style.c: (add_to_treeview), (remove_from_treeview),
	(update_in_treeview), (changed_on_disk_cb), (style_init):
	* appearance-themes.c: (theme_select_name),