@@ -1,3 +1,12 @@
+2007-06-26  Jens Granseuer  <jensgr@gmx.net>
+
+	* appearance-style.c: (prepare_list):
+	no need to reassign thumbnails inside the loop
+
+	* appearance-themes.c: (theme_load_from_gconf), (theme_is_equal):
+	consider NULL and "" equal for color schemes; also reshuffle
+	functions a bit and fix the include list
+
 2007-06-26  Denis Washington  <denisw@svn.gnome.org>
 
 	* gtk-theme-thumbnailing.png:
